parser.output
Grammar

    0 $accept: Start $end

    1 Start: Class

    2 Class: Class T_NAME_IDENTIFIER T_OPENBRACKET ClassB T_CLOSEBRACKET
    3      | Class T_NAME_IDENTIFIER T_EXTENDS T_NAME_IDENTIFIER T_OPENBRACKET ClassB T_CLOSEBRACKET
    4      | %empty

    5 ClassB: Members Methods
    6       | Members
    7       | Methods
    8       | %empty

    9 Type: T_NAME_IDENTIFIER
   10     | T_BOOL
   11     | T_INT

   12 Members: Members Member
   13        | Member

   14 Member: Type T_NAME_IDENTIFIER T_SEMICOLON

   15 ReturnType: Type
   16           | T_NONE

   17 Methods: Methods Method
   18        | Method

   19 Method: T_NAME_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_LARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

   20 Parameters: ParametersB
   21           | %empty

   22 ParametersB: ParametersB T_COMMA Type T_NAME_IDENTIFIER
   23            | Type T_NAME_IDENTIFIER

   24 Body: Declaration Statement Return
   25     | Declaration Statement
   26     | Declaration Return
   27     | Statement Return
   28     | Declaration
   29     | Statement
   30     | Return
   31     | %empty

   32 Declaration: Declaration Type DeclarationB T_SEMICOLON
   33            | Type DeclarationB T_SEMICOLON

   34 DeclarationB: DeclarationB T_COMMA T_NAME_IDENTIFIER
   35             | T_NAME_IDENTIFIER

   36 Return: T_RETURN Expression T_SEMICOLON

   37 Statement: Statement StatementB
   38          | StatementB

   39 StatementB: Assignment
   40           | If
   41           | MethodCall T_SEMICOLON
   42           | While
   43           | DoWhile
   44           | print

   45 Assignment: T_NAME_IDENTIFIER T_ASSIGNMENT Expression T_SEMICOLON
   46           | T_NAME_IDENTIFIER T_PERIOD T_NAME_IDENTIFIER T_ASSIGNMENT Expression T_SEMICOLON

   47 If: T_IF Expression T_OPENBRACKET Statement T_CLOSEBRACKET T_ELSE T_OPENBRACKET Statement T_CLOSEBRACKET
   48   | T_IF Expression T_OPENBRACKET Statement T_CLOSEBRACKET

   49 While: T_WHILE Expression T_OPENBRACKET Statement T_CLOSEBRACKET

   50 DoWhile: T_DO T_OPENBRACKET Statement T_CLOSEBRACKET T_WHILE T_OPENPAREN Expression T_CLOSEPAREN T_SEMICOLON

   51 print: T_PRINT Expression T_SEMICOLON

   52 Expression: Expression T_PLUS Expression
   53           | Expression T_MINUS Expression
   54           | Expression T_MULTIPLY Expression
   55           | Expression T_DIVIDE Expression
   56           | Expression T_GREATER Expression
   57           | Expression T_GREQ Expression
   58           | Expression T_EQUALS Expression
   59           | Expression T_AND Expression
   60           | Expression T_OR Expression
   61           | T_NOT Expression
   62           | T_MINUS Expression
   63           | T_NAME_IDENTIFIER
   64           | T_NAME_IDENTIFIER T_PERIOD T_NAME_IDENTIFIER
   65           | MethodCall
   66           | T_OPENPAREN Expression T_CLOSEPAREN
   67           | T_INTLITERAL
   68           | T_TRUE
   69           | T_FALSE
   70           | T_NEW T_NAME_IDENTIFIER
   71           | T_NEW T_NAME_IDENTIFIER T_OPENPAREN Arguments T_CLOSEPAREN

   72 MethodCall: T_NAME_IDENTIFIER T_OPENPAREN Arguments T_CLOSEPAREN
   73           | T_NAME_IDENTIFIER T_PERIOD T_NAME_IDENTIFIER T_OPENPAREN Arguments T_CLOSEPAREN

   74 Arguments: ArgumentsB
   75          | %empty

   76 ArgumentsB: ArgumentsB T_COMMA Expression
   77           | Expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_OPENBRACKET (258) 2 3 19 47 48 49 50
    T_CLOSEBRACKET (259) 2 3 19 47 48 49 50
    T_COMMA (260) 22 34 76
    T_OPENPAREN (261) 19 50 66 71 72 73
    T_CLOSEPAREN (262) 19 50 66 71 72 73
    T_SEMICOLON (263) 14 32 33 36 41 45 46 50 51
    T_PLUS (264) 52
    T_MINUS (265) 53 62
    T_MULTIPLY (266) 54
    T_DIVIDE (267) 55
    T_GREATER (268) 56
    T_GREQ (269) 57
    T_PERIOD (270) 46 64 73
    T_LARROW (271) 19
    T_EQUALS (272) 58
    T_AND (273) 59
    T_OR (274) 60
    T_PRINT (275) 51
    T_RETURN (276) 36
    T_ASSIGNMENT (277) 45 46
    T_IF (278) 47 48
    T_ELSE (279) 47
    T_WHILE (280) 49 50
    T_NEW (281) 70 71
    T_INT (282) 11
    T_NONE (283) 16
    T_TRUE (284) 68
    T_FALSE (285) 69
    T_NOT (286) 61
    T_BOOL (287) 10
    T_EXTENDS (288) 3
    T_DO (289) 50
    T_INTLITERAL <base_int> (290) 67
    T_NAME_IDENTIFIER <base_char_ptr> (291) 2 3 9 14 19 22 23 34 35 45 46 63 64 70 71 72 73


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Start <program_ptr> (38)
        on left: 1
        on right: 0
    Class <class_list_ptr> (39)
        on left: 2 3 4
        on right: 1 2 3
    ClassB <class_ptr> (40)
        on left: 5 6 7 8
        on right: 2 3
    Type <type_ptr> (41)
        on left: 9 10 11
        on right: 14 15 22 23 32 33
    Members <declaration_list_ptr> (42)
        on left: 12 13
        on right: 5 6 12
    Member <declaration_ptr> (43)
        on left: 14
        on right: 12 13
    ReturnType <type_ptr> (44)
        on left: 15 16
        on right: 19
    Methods <method_list_ptr> (45)
        on left: 17 18
        on right: 5 7 17
    Method <method_ptr> (46)
        on left: 19
        on right: 17 18
    Parameters <parameter_list_ptr> (47)
        on left: 20 21
        on right: 19
    ParametersB <parameter_list_ptr> (48)
        on left: 22 23
        on right: 20 22
    Body <methodbody_ptr> (49)
        on left: 24 25 26 27 28 29 30 31
        on right: 19
    Declaration <declaration_list_ptr> (50)
        on left: 32 33
        on right: 24 25 26 28 32
    DeclarationB <identifier_list_ptr> (51)
        on left: 34 35
        on right: 32 33 34
    Return <returnstatement_ptr> (52)
        on left: 36
        on right: 24 26 27 30
    Statement <statement_list_ptr> (53)
        on left: 37 38
        on right: 24 25 27 29 37 47 48 49 50
    StatementB <statement_ptr> (54)
        on left: 39 40 41 42 43 44
        on right: 37 38
    Assignment <assignment_ptr> (55)
        on left: 45 46
        on right: 39
    If <ifelse_ptr> (56)
        on left: 47 48
        on right: 40
    While <while_ptr> (57)
        on left: 49
        on right: 42
    DoWhile <dowhile_ptr> (58)
        on left: 50
        on right: 43
    print <print_ptr> (59)
        on left: 51
        on right: 44
    Expression <expression_ptr> (60)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 36 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 66 76 77
    MethodCall <methodcall_ptr> (61)
        on left: 72 73
        on right: 41 65
    Arguments <expression_list_ptr> (62)
        on left: 74 75
        on right: 71 72 73
    ArgumentsB <expression_list_ptr> (63)
        on left: 76 77
        on right: 74 76


State 0

    0 $accept: . Start $end

    $default  reduce using rule 4 (Class)

    Start  go to state 1
    Class  go to state 2


State 1

    0 $accept: Start . $end

    $end  shift, and go to state 3


State 2

    1 Start: Class .
    2 Class: Class . T_NAME_IDENTIFIER T_OPENBRACKET ClassB T_CLOSEBRACKET
    3      | Class . T_NAME_IDENTIFIER T_EXTENDS T_NAME_IDENTIFIER T_OPENBRACKET ClassB T_CLOSEBRACKET

    T_NAME_IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 1 (Start)


State 3

    0 $accept: Start $end .

    $default  accept


State 4

    2 Class: Class T_NAME_IDENTIFIER . T_OPENBRACKET ClassB T_CLOSEBRACKET
    3      | Class T_NAME_IDENTIFIER . T_EXTENDS T_NAME_IDENTIFIER T_OPENBRACKET ClassB T_CLOSEBRACKET

    T_OPENBRACKET  shift, and go to state 5
    T_EXTENDS      shift, and go to state 6


State 5

    2 Class: Class T_NAME_IDENTIFIER T_OPENBRACKET . ClassB T_CLOSEBRACKET

    T_INT              shift, and go to state 7
    T_BOOL             shift, and go to state 8
    T_NAME_IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 8 (ClassB)

    ClassB   go to state 10
    Type     go to state 11
    Members  go to state 12
    Member   go to state 13
    Methods  go to state 14
    Method   go to state 15


State 6

    3 Class: Class T_NAME_IDENTIFIER T_EXTENDS . T_NAME_IDENTIFIER T_OPENBRACKET ClassB T_CLOSEBRACKET

    T_NAME_IDENTIFIER  shift, and go to state 16


State 7

   11 Type: T_INT .

    $default  reduce using rule 11 (Type)


State 8

   10 Type: T_BOOL .

    $default  reduce using rule 10 (Type)


State 9

    9 Type: T_NAME_IDENTIFIER .
   19 Method: T_NAME_IDENTIFIER . T_OPENPAREN Parameters T_CLOSEPAREN T_LARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_OPENPAREN  shift, and go to state 17

    $default  reduce using rule 9 (Type)


State 10

    2 Class: Class T_NAME_IDENTIFIER T_OPENBRACKET ClassB . T_CLOSEBRACKET

    T_CLOSEBRACKET  shift, and go to state 18


State 11

   14 Member: Type . T_NAME_IDENTIFIER T_SEMICOLON

    T_NAME_IDENTIFIER  shift, and go to state 19


State 12

    5 ClassB: Members . Methods
    6       | Members .
   12 Members: Members . Member

    T_INT              shift, and go to state 7
    T_BOOL             shift, and go to state 8
    T_NAME_IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 6 (ClassB)

    Type     go to state 11
    Member   go to state 20
    Methods  go to state 21
    Method   go to state 15


State 13

   13 Members: Member .

    $default  reduce using rule 13 (Members)


State 14

    7 ClassB: Methods .
   17 Methods: Methods . Method

    T_NAME_IDENTIFIER  shift, and go to state 22

    $default  reduce using rule 7 (ClassB)

    Method  go to state 23


State 15

   18 Methods: Method .

    $default  reduce using rule 18 (Methods)


State 16

    3 Class: Class T_NAME_IDENTIFIER T_EXTENDS T_NAME_IDENTIFIER . T_OPENBRACKET ClassB T_CLOSEBRACKET

    T_OPENBRACKET  shift, and go to state 24


State 17

   19 Method: T_NAME_IDENTIFIER T_OPENPAREN . Parameters T_CLOSEPAREN T_LARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_INT              shift, and go to state 7
    T_BOOL             shift, and go to state 8
    T_NAME_IDENTIFIER  shift, and go to state 25

    $default  reduce using rule 21 (Parameters)

    Type         go to state 26
    Parameters   go to state 27
    ParametersB  go to state 28


State 18

    2 Class: Class T_NAME_IDENTIFIER T_OPENBRACKET ClassB T_CLOSEBRACKET .

    $default  reduce using rule 2 (Class)


State 19

   14 Member: Type T_NAME_IDENTIFIER . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 29


State 20

   12 Members: Members Member .

    $default  reduce using rule 12 (Members)


State 21

    5 ClassB: Members Methods .
   17 Methods: Methods . Method

    T_NAME_IDENTIFIER  shift, and go to state 22

    $default  reduce using rule 5 (ClassB)

    Method  go to state 23


State 22

   19 Method: T_NAME_IDENTIFIER . T_OPENPAREN Parameters T_CLOSEPAREN T_LARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_OPENPAREN  shift, and go to state 17


State 23

   17 Methods: Methods Method .

    $default  reduce using rule 17 (Methods)


State 24

    3 Class: Class T_NAME_IDENTIFIER T_EXTENDS T_NAME_IDENTIFIER T_OPENBRACKET . ClassB T_CLOSEBRACKET

    T_INT              shift, and go to state 7
    T_BOOL             shift, and go to state 8
    T_NAME_IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 8 (ClassB)

    ClassB   go to state 30
    Type     go to state 11
    Members  go to state 12
    Member   go to state 13
    Methods  go to state 14
    Method   go to state 15


State 25

    9 Type: T_NAME_IDENTIFIER .

    $default  reduce using rule 9 (Type)


State 26

   23 ParametersB: Type . T_NAME_IDENTIFIER

    T_NAME_IDENTIFIER  shift, and go to state 31


State 27

   19 Method: T_NAME_IDENTIFIER T_OPENPAREN Parameters . T_CLOSEPAREN T_LARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_CLOSEPAREN  shift, and go to state 32


State 28

   20 Parameters: ParametersB .
   22 ParametersB: ParametersB . T_COMMA Type T_NAME_IDENTIFIER

    T_COMMA  shift, and go to state 33

    $default  reduce using rule 20 (Parameters)


State 29

   14 Member: Type T_NAME_IDENTIFIER T_SEMICOLON .

    $default  reduce using rule 14 (Member)


State 30

    3 Class: Class T_NAME_IDENTIFIER T_EXTENDS T_NAME_IDENTIFIER T_OPENBRACKET ClassB . T_CLOSEBRACKET

    T_CLOSEBRACKET  shift, and go to state 34


State 31

   23 ParametersB: Type T_NAME_IDENTIFIER .

    $default  reduce using rule 23 (ParametersB)


State 32

   19 Method: T_NAME_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN . T_LARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_LARROW  shift, and go to state 35


State 33

   22 ParametersB: ParametersB T_COMMA . Type T_NAME_IDENTIFIER

    T_INT              shift, and go to state 7
    T_BOOL             shift, and go to state 8
    T_NAME_IDENTIFIER  shift, and go to state 25

    Type  go to state 36


State 34

    3 Class: Class T_NAME_IDENTIFIER T_EXTENDS T_NAME_IDENTIFIER T_OPENBRACKET ClassB T_CLOSEBRACKET .

    $default  reduce using rule 3 (Class)


State 35

   19 Method: T_NAME_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_LARROW . ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_INT              shift, and go to state 7
    T_NONE             shift, and go to state 37
    T_BOOL             shift, and go to state 8
    T_NAME_IDENTIFIER  shift, and go to state 25

    Type        go to state 38
    ReturnType  go to state 39


State 36

   22 ParametersB: ParametersB T_COMMA Type . T_NAME_IDENTIFIER

    T_NAME_IDENTIFIER  shift, and go to state 40


State 37

   16 ReturnType: T_NONE .

    $default  reduce using rule 16 (ReturnType)


State 38

   15 ReturnType: Type .

    $default  reduce using rule 15 (ReturnType)


State 39

   19 Method: T_NAME_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_LARROW ReturnType . T_OPENBRACKET Body T_CLOSEBRACKET

    T_OPENBRACKET  shift, and go to state 41


State 40

   22 ParametersB: ParametersB T_COMMA Type T_NAME_IDENTIFIER .

    $default  reduce using rule 22 (ParametersB)


State 41

   19 Method: T_NAME_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_LARROW ReturnType T_OPENBRACKET . Body T_CLOSEBRACKET

    T_PRINT            shift, and go to state 42
    T_RETURN           shift, and go to state 43
    T_IF               shift, and go to state 44
    T_WHILE            shift, and go to state 45
    T_INT              shift, and go to state 7
    T_BOOL             shift, and go to state 8
    T_DO               shift, and go to state 46
    T_NAME_IDENTIFIER  shift, and go to state 47

    $default  reduce using rule 31 (Body)

    Type         go to state 48
    Body         go to state 49
    Declaration  go to state 50
    Return       go to state 51
    Statement    go to state 52
    StatementB   go to state 53
    Assignment   go to state 54
    If           go to state 55
    While        go to state 56
    DoWhile      go to state 57
    print        go to state 58
    MethodCall   go to state 59


State 42

   51 print: T_PRINT . Expression T_SEMICOLON

    T_OPENPAREN        shift, and go to state 60
    T_MINUS            shift, and go to state 61
    T_NEW              shift, and go to state 62
    T_TRUE             shift, and go to state 63
    T_FALSE            shift, and go to state 64
    T_NOT              shift, and go to state 65
    T_INTLITERAL       shift, and go to state 66
    T_NAME_IDENTIFIER  shift, and go to state 67

    Expression  go to state 68
    MethodCall  go to state 69


State 43

   36 Return: T_RETURN . Expression T_SEMICOLON

    T_OPENPAREN        shift, and go to state 60
    T_MINUS            shift, and go to state 61
    T_NEW              shift, and go to state 62
    T_TRUE             shift, and go to state 63
    T_FALSE            shift, and go to state 64
    T_NOT              shift, and go to state 65
    T_INTLITERAL       shift, and go to state 66
    T_NAME_IDENTIFIER  shift, and go to state 67

    Expression  go to state 70
    MethodCall  go to state 69


State 44

   47 If: T_IF . Expression T_OPENBRACKET Statement T_CLOSEBRACKET T_ELSE T_OPENBRACKET Statement T_CLOSEBRACKET
   48   | T_IF . Expression T_OPENBRACKET Statement T_CLOSEBRACKET

    T_OPENPAREN        shift, and go to state 60
    T_MINUS            shift, and go to state 61
    T_NEW              shift, and go to state 62
    T_TRUE             shift, and go to state 63
    T_FALSE            shift, and go to state 64
    T_NOT              shift, and go to state 65
    T_INTLITERAL       shift, and go to state 66
    T_NAME_IDENTIFIER  shift, and go to state 67

    Expression  go to state 71
    MethodCall  go to state 69


State 45

   49 While: T_WHILE . Expression T_OPENBRACKET Statement T_CLOSEBRACKET

    T_OPENPAREN        shift, and go to state 60
    T_MINUS            shift, and go to state 61
    T_NEW              shift, and go to state 62
    T_TRUE             shift, and go to state 63
    T_FALSE            shift, and go to state 64
    T_NOT              shift, and go to state 65
    T_INTLITERAL       shift, and go to state 66
    T_NAME_IDENTIFIER  shift, and go to state 67

    Expression  go to state 72
    MethodCall  go to state 69


State 46

   50 DoWhile: T_DO . T_OPENBRACKET Statement T_CLOSEBRACKET T_WHILE T_OPENPAREN Expression T_CLOSEPAREN T_SEMICOLON

    T_OPENBRACKET  shift, and go to state 73


State 47

    9 Type: T_NAME_IDENTIFIER .
   45 Assignment: T_NAME_IDENTIFIER . T_ASSIGNMENT Expression T_SEMICOLON
   46           | T_NAME_IDENTIFIER . T_PERIOD T_NAME_IDENTIFIER T_ASSIGNMENT Expression T_SEMICOLON
   72 MethodCall: T_NAME_IDENTIFIER . T_OPENPAREN Arguments T_CLOSEPAREN
   73           | T_NAME_IDENTIFIER . T_PERIOD T_NAME_IDENTIFIER T_OPENPAREN Arguments T_CLOSEPAREN

    T_OPENPAREN   shift, and go to state 74
    T_PERIOD      shift, and go to state 75
    T_ASSIGNMENT  shift, and go to state 76

    $default  reduce using rule 9 (Type)


State 48

   33 Declaration: Type . DeclarationB T_SEMICOLON

    T_NAME_IDENTIFIER  shift, and go to state 77

    DeclarationB  go to state 78


State 49

   19 Method: T_NAME_IDENTIFIER T_OPENPAREN Parameters T_CLOSEPAREN T_LARROW ReturnType T_OPENBRACKET Body . T_CLOSEBRACKET

    T_CLOSEBRACKET  shift, and go to state 79


State 50

   24 Body: Declaration . Statement Return
   25     | Declaration . Statement
   26     | Declaration . Return
   28     | Declaration .
   32 Declaration: Declaration . Type DeclarationB T_SEMICOLON

    T_PRINT            shift, and go to state 42
    T_RETURN           shift, and go to state 43
    T_IF               shift, and go to state 44
    T_WHILE            shift, and go to state 45
    T_INT              shift, and go to state 7
    T_BOOL             shift, and go to state 8
    T_DO               shift, and go to state 46
    T_NAME_IDENTIFIER  shift, and go to state 47

    $default  reduce using rule 28 (Body)

    Type        go to state 80
    Return      go to state 81
    Statement   go to state 82
    StatementB  go to state 53
    Assignment  go to state 54
    If          go to state 55
    While       go to state 56
    DoWhile     go to state 57
    print       go to state 58
    MethodCall  go to state 59


State 51

   30 Body: Return .

    $default  reduce using rule 30 (Body)


State 52

   27 Body: Statement . Return
   29     | Statement .
   37 Statement: Statement . StatementB

    T_PRINT            shift, and go to state 42
    T_RETURN           shift, and go to state 43
    T_IF               shift, and go to state 44
    T_WHILE            shift, and go to state 45
    T_DO               shift, and go to state 46
    T_NAME_IDENTIFIER  shift, and go to state 83

    $default  reduce using rule 29 (Body)

    Return      go to state 84
    StatementB  go to state 85
    Assignment  go to state 54
    If          go to state 55
    While       go to state 56
    DoWhile     go to state 57
    print       go to state 58
    MethodCall  go to state 59


State 53

   38 Statement: StatementB .

    $default  reduce using rule 38 (Statement)


State 54

   39 StatementB: Assignment .

    $default  reduce using rule 39 (StatementB)


State 55

   40 StatementB: If .

    $default  reduce using rule 40 (StatementB)


State 56

   42 StatementB: While .

    $default  reduce using rule 42 (StatementB)


State 57

   43 StatementB: DoWhile .

    $default  reduce using rule 43 (StatementB)


State 58

   44 StatementB: print .

    $default  reduce using rule 44 (StatementB)


State 59

   41 StatementB: MethodCall . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 86


State 60

   66 Expression: T_OPENPAREN . Expression T_CLOSEPAREN

    T_OPENPAREN        shift, and go to state 60
    T_MINUS            shift, and go to state 61
    T_NEW              shift, and go to state 62
    T_TRUE             shift, and go to state 63
    T_FALSE            shift, and go to state 64
    T_NOT              shift, and go to state 65
    T_INTLITERAL       shift, and go to state 66
    T_NAME_IDENTIFIER  shift, and go to state 67

    Expression  go to state 87
    MethodCall  go to state 69


State 61

   62 Expression: T_MINUS . Expression
